fix overflow and social icons hover

--- a/style.css
+++ b/style.css
@@ -2,13 +2,19 @@
 
 html, body{
 width: 100%;
-overflow-x: hidden;
+/*height: 100%;*/
+padding: 0;
+margin: 0;
 }
-
 
 body{
-overflow-x: hidden;
+overflow-x: hidden !important;
 }
+
+
+/*body{
+overflow-x: hidden;
+}*/
 
 
 /*
@@ -41,6 +47,10 @@ overflow-x: hidden;
   .btn-projects:hover{
     color: #343a40;
     background-color: white;
+  }
+
+  .navbar svg:hover{
+    color: rgba(255,255,255,.5) !important;
   }
   
   #scrollUp {
@@ -170,11 +180,16 @@ overflow-x: hidden;
   text-align: center;
 }
 
+ @media (max-width: 575px) { 
+  .text{
+    font-size: 15px;
+  }  
+ }
 
 #experience-section1{
   background: white;
   text-align: center;
-  padding: 5rem;
+  padding: 5rem 0;
   margin-bottom: 2rem;
 }
 
@@ -187,7 +202,7 @@ overflow-x: hidden;
 #experience-section2{
   background: white;
   text-align: center;
-  padding: 5rem;
+  padding: 5rem 0;
   margin-bottom: 2rem;
 }
 
@@ -252,8 +267,8 @@ overflow-x: hidden;
   list-style: none;
 }
 
-#main-footer a:hover{
-    color: #68a2ff;
+#main-footer svg:hover{
+    color: #68a2ff !important;
 }
 
 @media (max-width: 575px) { 
